--- a/service_Payment/.env
+++ b/service_Payment/.env
@@ -1,5 +1,5 @@
-DATABASE_URL="postgresql://alquaghhicham1:2DtrTOv7myjd@ep-restless-credit-a5q8o8ug-pooler.us-east-2.aws.neon.tech/Kim?sslmode=require&pgbouncer=true"
-DIRECT_URL="postgresql://alquaghhicham1:2DtrTOv7myjd@ep-restless-credit-a5q8o8ug.us-east-2.aws.neon.tech/Kim?sslmode=require"
+DATABASE_URL="postgresql://alquaghhicham1:2DtrTOv7myjd@ep-restless-credit-a5q8o8ug-pooler.us-east-2.aws.neon.tech/phone_ecom_micro?sslmode=require&pgbouncer=true"
+DIRECT_URL="postgresql://alquaghhicham1:2DtrTOv7myjd@ep-restless-credit-a5q8o8ug.us-east-2.aws.neon.tech/phone_ecom_micro?sslmode=require"
 
 PAYPAL_MODE="sandbox"
 PAYPAL_CLIENT_KEY="AWJoVAMRkSUwrTEMq2jii_dzJJocsKES6A-k0tlboRbdcurFhWkL8Pgzo8alwdvcXtLehumN1gk89zkJ-MZ"
